<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        android:padding="10dp" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/leavedate"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/leavdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:background="@drawable/layoutborder"
                        android:drawableRight="@drawable/datepickermob"
                        android:hint="Leave Date"
                        android:ems="10"
                        android:focusable="false"
                        android:inputType="date"
                        android:padding="10dp"
                         >
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comtype"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal" >

                        <Spinner
                            android:id="@+id/comtypespinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/compotype"
                            android:padding="10dp"
                            android:background="@drawable/layoutborder"
                            android:prompt="@string/compotype_strings" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/leave1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comdate"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/comdatespinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" 
                         android:padding="10dp"
                          android:background="@drawable/layoutborder" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/session"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/sessionspinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/session"
                         android:padding="10dp"
                           android:background="@drawable/layoutborder"
                        android:prompt="@string/session_strings" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/totaldayslbl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/totaldays"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/totaldays"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/layoutborder"
                        android:editable="false"
                        android:ems="10"
                        android:text="0.0"
                        android:padding="5dp"
                        android:inputType="none" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/leavreason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"                   
                        android:lines="4"     
                        android:paddingLeft="5dp"
                        android:background="@drawable/layoutborder"
                        android:hint="@string/leavereason"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/approvalbutton_submit"
                        android:text="@string/apply" />

                    <Button
                        android:id="@+id/reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/approvalbutton_cancel"
                        android:text="@string/reset" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>