<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/studio"
        android:padding="7dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="Leave Apply"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    
    
    

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" 
         android:padding="10dp">

            <TextView
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fromdate"
                android:textSize="@dimen/sub_title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2" >

                <EditText
                    android:id="@+id/fromdate"
                   android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/layoutborder"
                    android:ems="10"
                    android:drawableRight="@drawable/datepickermob"  
                    android:focusable="false"                
                    android:inputType="date"
                    android:padding="10dp" >
                </EditText>

                <Spinner
                    android:id="@+id/sessionfrom"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/layoutborder"
                    android:layout_weight="1"                    
                    android:entries="@array/session"
                    android:prompt="@string/session_strings" />
            </LinearLayout>

            <TextView
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todate"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/sub_title_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2" >

                <EditText
                    android:id="@+id/todate"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/layoutborder"
                    android:ems="10"
                    android:drawableRight="@drawable/datepickermob"
                    android:focusable="false"
                    android:hint="@string/todate"
                    android:inputType="date"
                    android:padding="10dp" />

                <Spinner
                    android:id="@+id/sessionto"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1" 
                    android:background="@drawable/layoutborder"                   
                    android:entries="@array/session"
                    android:prompt="@string/session_strings"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:id="@+id/leave1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leavetype" 
                  android:layout_marginTop="10dp"               
                android:textSize="@dimen/sub_title_size"
                android:textStyle="bold" />

            <Spinner
                android:layout_marginTop="5dp"
                android:id="@+id/leavetype"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layoutborder"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totaldays"                    
                    android:textSize="@dimen/sub_title_size"
                    android:textStyle="bold" />
         

            <EditText
                android:id="@+id/totaldays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layoutborder"
                android:ems="10"
                  android:layout_marginTop="5dp"
                android:padding="5dp"
                android:focusable="false"
                android:inputType="none"
                android:text="0.0" />
   </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/leavreason"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:ems="10"
                    android:lines="4"
                    android:paddingLeft="5dp"
                    android:background="@drawable/layoutborder"
                    android:hint="@string/leavereason"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/apply"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/approvalbutton_submit"
                    android:text="@string/apply"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/approvalbutton_cancel"
                    android:text="@string/reset"
                    android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    

</LinearLayout>
